--- a/main.html
+++ b/main.html
@@ -8,8 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<!-- heading tags -->
 	<h1>Hello World</h1>
+	<!-- h1 carries the highest importance -->
+	<!-- Heading 2</h2>
 	<h2>Introducing Accio Ipsum</h2>
+	<!-- paragrph tag-->
 	<p>Accio ipsum text, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
     <script type="text/javascript" src="./script.js">
 </script>
