--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
 	<!-- heading tags -->
 	<h1>Hello World</h1>
 	<!-- h1 carries the highest importance -->
-	<!-- Heading 2</h2>
+	<!-- Headingtag 2-->
 	<h2>Introducing Accio Ipsum</h2>
+	<!-- h2 carries the subheading -->
 	<!-- paragrph tag-->
 	<p>Accio ipsum text, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
     <script type="text/javascript" src="./script.js">
