--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	<h2>Introducing Accio Ipsum</h2>
 	<!-- h2 carries the subheading -->
 	<!-- paragrph tag-->
-	<p>Accio ipsum text, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
+	<p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
